trunk/Archive2/96/4068dcf0b5fd4e/output
main.cpp: In function 'int main()':
main.cpp:13:24: error: cannot convert 'WrappedPrimitive<float>*' to 'float*' for argument '1' to 'void maninpulateFloat(float*)'
     maninpulateFloat(&a);
                        ^
